--- a/post/templates/post/skeleton-post-js.html
+++ b/post/templates/post/skeleton-post-js.html
@@ -218,6 +218,18 @@
             <!-- Post statistics -->
             <div class="social-count" style="margin-top: 1em;">
 
+                <div class="comments-count">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="feather feather-message-circle">
+                        <path
+                            d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z">
+                        </path>
+                    </svg>
+                    <span id="comment-counter` + post.post_id + `">`+ post.comments +`</span>
+                </div>
+
+
                 <div class="likes-count">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -229,26 +241,8 @@
                     <span class="likes-display` + post.post_id + `">` + post.likes + `</span>
                 </div>
 
-<!--                <div class="shares-count">-->
-<!--                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"-->
-<!--                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"-->
-<!--                        class="feather feather-link-2">-->
-<!--                        <path d="M15 7h3a5 5 0 0 1 5 5 5 5 0 0 1-5 5h-3m-6 0H6a5 5 0 0 1-5-5 5 5 0 0 1 5-5h3"></path>-->
-<!--                        <line x1="8" y1="12" x2="16" y2="12"></line>-->
-<!--                    </svg>-->
-<!--                    <span>9</span>-->
-<!--                </div>-->
 
-                <div class="comments-count">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                        class="feather feather-message-circle">
-                        <path
-                            d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z">
-                        </path>
-                    </svg>
-                    <span id="comment-counter` + post.post_id + `">`+ post.comments +`</span>
-                </div>
+
 
             </div>
         </div>
@@ -541,6 +535,17 @@
             <!-- Post statistics -->
             <div class="social-count" style="margin-top: 1em;">
 
+                <div class="comments-count">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="feather feather-message-circle">
+                        <path
+                            d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z">
+                        </path>
+                    </svg>
+                    <span id="comment-counter` + post.post_id + `">`+ post.comments +`</span>
+                </div>
+
                 <div class="likes-count">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -552,26 +557,7 @@
                     <span class="likes-display` + post.post_id + `">` + post.likes + `</span>
                 </div>
 
-<!--                <div class="shares-count">-->
-<!--                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"-->
-<!--                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"-->
-<!--                        class="feather feather-link-2">-->
-<!--                        <path d="M15 7h3a5 5 0 0 1 5 5 5 5 0 0 1-5 5h-3m-6 0H6a5 5 0 0 1-5-5 5 5 0 0 1 5-5h3"></path>-->
-<!--                        <line x1="8" y1="12" x2="16" y2="12"></line>-->
-<!--                    </svg>-->
-<!--                    <span>9</span>-->
-<!--                </div>-->
 
-                <div class="comments-count">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                        class="feather feather-message-circle">
-                        <path
-                            d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z">
-                        </path>
-                    </svg>
-                    <span id="comment-counter` + post.post_id + `">`+ post.comments +`</span>
-                </div>
 
             </div>
         </div>
@@ -798,55 +784,69 @@ let dict;
         });
     }
 
-    function setFirstLevelFilter(id)
+    function setFirstLevelFilter(id, element_id)
     {
         let index = first_level_category_mul.indexOf(id);
         if(index === -1)
         {
             first_level_category_mul.push(id);
+            $(`#${element_id}`).css("color", "red");
         }
         else{
             first_level_category_mul.splice(index, 1);
+            $(`#${element_id}`).css("color", "black");
         }
 
         filterPostMultiple();
     }
-    function setSecondLevelFilter(id, first_id=null)
+    function setSecondLevelFilter(id,  element_id,first_id=null)
     {
 
         let index = second_level_category_mul.indexOf(id);
         if(index === -1)
         {
             second_level_category_mul.push(id);
+            $(`#${element_id}`).css("color", "red");
+
         }
         else{
+          $(`#${element_id}`).css("color", "black");
+
             second_level_category_mul.splice(index, 1);
         }
 
         filterPostMultiple();
     }
-    function setThirdLevelFilter(id, first_id=null, second_id=null)
+    function setThirdLevelFilter(id, element_id,first_id=null, second_id=null)
     {
         let index = third_level_category_mul.indexOf(id);
         if(index === -1)
         {
             third_level_category_mul.push(id);
+                        $(`#${element_id}`).css("color", "red");
+
         }
         else{
             third_level_category_mul.splice(index, 1);
+                        $(`#${element_id}`).css("color", "black");
+
         }
 
         filterPostMultiple();
     }
-    function setFourthLevelFilter(id, first_id=null, second_id=null, third_id=null)
+    function setFourthLevelFilter(id, element_id,first_id=null, second_id=null, third_id=null)
     {
         let index = fourth_level_category_mul.indexOf(id);
         if(index === -1)
         {
             fourth_level_category_mul.push(id);
+                        $(`#${element_id}`).css("color", "red");
+
         }
         else{
             fourth_level_category_mul.splice(index, 1);
+                        $(`#${element_id}`).css("color", "black");
+
         }
 
         filterPostMultiple();
